--- a/HouseBuilder.csproj
+++ b/HouseBuilder.csproj
@@ -8,6 +8,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <Folder Include="Factory\DoorFactory\" />
+      <Folder Include="Factory\WallFactory\" />
+      <Folder Include="Factory\WindowFactory\" />
       <Folder Include="Model\" />
     </ItemGroup>
 
